// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MonitorATMEmptyState> partially configured ATM snapshot test 1`] = `
<div
  className="ant-row"
>
  <div
    className="ant-col-12 ant-col-offset-6 center-empty-state"
  >
    <div
      className="ant-list ant-list-vertical ant-list-sm ant-list-something-after-last-item"
    >
      <div
        className="ant-list-header"
      >
        <h2
          className="ub-m0"
        >
          Get started with Services Monitor
        </h2>
      </div>
      <div
        className="ant-spin-nested-loading"
        style={null}
      >
        <div
          className="ant-spin-container"
          key="container"
        >
          <div
            key="list-item-0/.0"
          >
            • 
            Configured
             
            <svg
              fill="currentColor"
              height="1em"
              preserveAspectRatio="xMidYMid meet"
              style={
                Object {
                  "color": undefined,
                  "verticalAlign": "middle",
                }
              }
              viewBox="0 0 40 40"
              width="1em"
            >
              <g>
                <path
                  d="m26.3 13.8l1.4 1.4-10.4 10.6c-0.2 0.1-0.5 0.3-0.8 0.3s-0.5-0.2-0.7-0.3l-4.3-4.4 1.4-1.4 3.6 3.7z m-6.5-10c8.9 0 16.2 7.2 16.2 16.2s-7.3 16.3-16.2 16.3-16.3-7.3-16.3-16.3 7.3-16.2 16.3-16.2z m0 31.1c8.2 0 14.9-6.7 14.9-14.9s-6.7-14.9-14.9-14.9-15 6.7-15 14.9 6.7 14.9 15 14.9z"
                />
              </g>
            </svg>
          </div>
          <div
            key="list-item-1/.1"
          >
            • 
            Sent data
             
            <svg
              fill="currentColor"
              height="1em"
              preserveAspectRatio="xMidYMid meet"
              style={
                Object {
                  "color": undefined,
                  "verticalAlign": "middle",
                }
              }
              viewBox="0 0 40 40"
              width="1em"
            >
              <g>
                <path
                  d="m19.8 3.8c8.9 0 16.2 7.2 16.2 16.2s-7.3 16.3-16.2 16.3-16.3-7.3-16.3-16.3 7.3-16.2 16.3-16.2z m0 31.1c8.2 0 14.9-6.7 14.9-14.9s-6.7-14.9-14.9-14.9-15 6.7-15 14.9 6.7 14.9 15 14.9z"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        className="ant-list-footer"
      >
        <a
          className="ant-btn"
          href="https://www.jaegertracing.io/docs/latest/frontend-ui/"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#199",
              "color": "#fff",
            }
          }
          target="_blank"
        >
          <span
            key=".0"
          >
            Go to documentation
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<MonitorATMEmptyState>not configured ATM snapshot test 1`] = `
<div
  className="ant-row"
>
  <div
    className="ant-col-12 ant-col-offset-6 center-empty-state"
  >
    <div
      className="ant-list ant-list-vertical ant-list-sm ant-list-something-after-last-item"
    >
      <div
        className="ant-list-header"
      >
        <h2
          className="ub-m0"
        >
          Get started with Services Monitor
        </h2>
      </div>
      <div
        className="ant-spin-nested-loading"
        style={null}
      >
        <div
          className="ant-spin-container"
          key="container"
        >
          <div
            key="list-item-0/.0"
          >
            • 
            Configured
             
            <svg
              fill="currentColor"
              height="1em"
              preserveAspectRatio="xMidYMid meet"
              style={
                Object {
                  "color": undefined,
                  "verticalAlign": "middle",
                }
              }
              viewBox="0 0 40 40"
              width="1em"
            >
              <g>
                <path
                  d="m19.8 3.8c8.9 0 16.2 7.2 16.2 16.2s-7.3 16.3-16.2 16.3-16.3-7.3-16.3-16.3 7.3-16.2 16.3-16.2z m0 31.1c8.2 0 14.9-6.7 14.9-14.9s-6.7-14.9-14.9-14.9-15 6.7-15 14.9 6.7 14.9 15 14.9z"
                />
              </g>
            </svg>
          </div>
          <div
            key="list-item-1/.1"
          >
            • 
            Sent data
             
            <svg
              fill="currentColor"
              height="1em"
              preserveAspectRatio="xMidYMid meet"
              style={
                Object {
                  "color": undefined,
                  "verticalAlign": "middle",
                }
              }
              viewBox="0 0 40 40"
              width="1em"
            >
              <g>
                <path
                  d="m19.8 3.8c8.9 0 16.2 7.2 16.2 16.2s-7.3 16.3-16.2 16.3-16.3-7.3-16.3-16.3 7.3-16.2 16.3-16.2z m0 31.1c8.2 0 14.9-6.7 14.9-14.9s-6.7-14.9-14.9-14.9-15 6.7-15 14.9 6.7 14.9 15 14.9z"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      <div
        className="ant-list-footer"
      >
        <a
          className="ant-btn"
          href="https://www.jaegertracing.io/docs/latest/frontend-ui/"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#199",
              "color": "#fff",
            }
          }
          target="_blank"
        >
          <span
            key=".0"
          >
            Go to documentation
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;
